k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${KUBE_NAMESPACE}
  labels:
    name: ${KUBE_NAMESPACE}
